--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 		<h1 id="title">Our Menu</h1>
 		<section class="col-lg-4 col-md-6 col-sd-12">
 			<p class="region1">Chicken</p>
-			<p class="text"> lorem ipsum dolor sit amet, consecteur adipiscing elit, set to eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat</p>
+			<p class="text"> lorem ipsum dolor sit amet, consecteur adipiscing elit, set to eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.</p>
 		</section>
 		<section class="col-lg-4 col-md-6 col-sd-12">
 			<p class="region2">Beef</p>
-			<p class="text">lorem ipsum dolor sit amet, consecteur adipiscing elit, set to eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat</p>
+			<p class="text">lorem ipsum dolor sit amet, consecteur adipiscing elit, set to eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.</p>
 		</section>
 		<section class="col-lg-4 col-md-12 col-sd-12">
 			<p class="region3">Sushi</p>
-			<p class="text">lorem ipsum dolor sit amet, consecteur adipiscing elit, set to eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat</p>
+			<p class="text">lorem ipsum dolor sit amet, consecteur adipiscing elit, set to eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nosturd exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.</p>
 		</section>
 	</div>
 </body>
